torrents/experimetns/m2t/m2t.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magnet2torrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: magnet2torrent
  template:
    metadata:
      labels:
        app: magnet2torrent
    spec:
      securityContext:
        fsGroup: 1001
      volumes:
      - name: torrents
        persistentVolumeClaim:
          claimName: torrents
      containers:
      - name: magnet2torrent
        image: docker.io/antaresinc/magnet2torrent:sha-72c61ab04e716e8d1e59f40c8be4e5840cf27374
        command:
        - python
        - main.py
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        volumeMounts:
        - name: torrents
          mountPath: "/torrent"
        resources:
          requests:
            memory: 35Mi
          limits:
            memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: m2t
spec:
  selector:
    app: magnet2torrent
  ports:
  - name: http
    port: 80
    targetPort: web
