torrents/experimetns/m2t/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: m2t
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: AUTOMATIC_REPLACE
spec:
  ingressClassName: nginx
  tls:
  - secretName: AUTOMATIC_REPLACE
  rules:
  - host: AUTOMATIC_REPLACE
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: m2t
            port:
              name: http
